componiendo nombre qlero

--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     <h3>sobre <span>creación de la pagina</span></h3>
                     <p>José Antonio Utrera Díaz </p>
                     <p id="comentario">"Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por scientie, musica, sport etc, litot Europa usa li sam vocabular. Li lingues differe solmen in li grammatica"</p>
-                    <p>Adolfo Pastelin Encizo</p>
+                    <p>Adolfo Pastelin Enciso</p>
                     <p id="comentario">"Cuando tenga mi lap haré muchas cosas en la pagina web. 
                       KAPPA DE ALL MIGTH"</p>
                   </div>
