--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <div class="contenedor-video clearfix">
             <video autoplay loop poster="posterimage.jpg">
                 <source src="video/La sala de cine.mp4"   type="video/mp4">
-                <source src="video/La sala de cine.webm"  type="video/web">
+                <source src="video/La sala de cine.webm"  type="video/webm">
                 <source src="video/La sala de cine.ogv"   type="video/ogv">
             </video>
         </div> <!--.contenedor video-->
