--- a/index.html
+++ b/index.html
@@ -43,11 +43,10 @@
             </div> <!-- .informacion-evento -->
             
           </div>
-        </div><!-- .hero -->
-
+        </div><!-- .hero -->   
       </header>
       <!-- Barra de navegación -->
-      <div class="barra">
+      <div class="barra clearfix">
         <div class="contenedor clearfix">
           <div class="logo clearfix">
             <img src="img/logodif.svg" alt="logo moviereviewer">
@@ -61,7 +60,7 @@
             <a href="#">INICIO</a>
             <a href="#">PELICULAS</a>
             <a href="#">INICIAR SESIÓN</a>
-            <a href="#">REGISTRARSE</a>
+            <a href="registro.html">REGISTRARSE</a>
           </nav> <!-- Navegador Principal-->
         </div><!-- Contenedor -->
       </div><!-- Barra de navegación -->
@@ -109,7 +108,6 @@
            </div><!--.contenedor-->
          </div> <!--.Contenido-autores-->
       </section> <!--.Sección-->
-
       <section class="peliculas contenedor seccion  clearfix  ">
         <h2> NUESTRAS MEJORES PELICULAS </h2>
           <ul class="most-movies">
