creation of structure html form - Register users

--- a/registro.html
+++ b/registro.html
@@ -43,26 +43,7 @@
             
           </div>
         </div><!-- .hero -->
-q
-        <section class="seccion contenedor">
-            <h2> REGISTRO USUARIOS</h2>
-              <form id="registro" class="registro" action="index.html" method="post">
-                <div id="datos_usuario" class="registro caja clearfix">
-                  <div class="campo">
-                    <label for="nombre">Nombre: </label>
-                    <input type="text" id="nombre" name="nombre" placeholder="Tú nombre">
-                  </div>
-                  <div class="campo">
-                    <label for="apellido">Apellido: </label>
-                    <input type="text" id="apellido" name="apellido" placeholder="Tú apellido">
-                  </div>
-                  <div class="campo">
-                    <label for="email">Email: </label>
-                    <input type="text" id="email" name="email" placeholder="Tú email">
-                  </div>
-                  <div id="error"></div> 
-                </div>  <!--.Datos Usuarios --> 
-              </form>
+
 
       </header>
       <!-- Barra de navegación -->
@@ -84,6 +65,36 @@ q
           </nav> <!-- Navegador Principal-->
         </div><!-- Contenedor -->
       </div><!-- Barra de navegación -->
+
+      <section class="seccion contenedor">    
+        <h2> REGISTRO USUARIOS</h2>
+          <form id="registro" class="registro" action="index.html" method="post">
+            <div id="datos_usuario" class="registro caja clearfix">
+                <h3>Datos personales</h3>
+                <div class="campo">
+                <label for="nickname">Nickname: </label>
+                <input type="text" id="nickname" name="nickname" placeholder="Tú nickname">
+              </div>
+              <div class="campo">
+                <label for="contraseña">Contraseña: </label>
+                <input type="text" id="contraseña" name="contraseña" placeholder="Tú contraseña">
+              </div>
+              <div class="campo">
+                <label for="nombre">Nombre: </label>
+                <input type="text" id="nombre" name="nombre" placeholder="Tú nombre">
+              </div>
+              <div class="campo">
+                <label for="apellido">Apellido: </label>
+                <input type="text" id="apellido" name="apellido" placeholder="Tú apellido">
+              </div>
+              <div class="campo">
+                <label for="email">Email: </label>
+                <input type="text" id="email" name="email" placeholder="Tú email">
+              </div>
+              <div id="error"></div> 
+            </div>  <!--.Datos Usuarios --> 
+          </form>
+
 
       <footer class="contenido-footer">
         <div class="contenedor clearfix">
