ajustes boton arriba (pendiente de ajustar contenedor de video)

--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
 
   <link rel="stylesheet" href="estilos.css">
   <link rel="stylesheet" href="fonts.css">
-
-  <!--Enlaces utilizados para el boton de ir-arriba -->
+  <script type="text/javascript" src="libs/jquery.js"></script>
+  <script src="arriba.js"></script>
+  <!-- SCRIPT Y ENLACES DE JS PARA HACER FUNCIONAR EL BOTON ir-arriba
+     (INCLUIR EN EL FOOTER DESPUES)-->
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -67,7 +69,7 @@
           <span></span>
         </div>
         <nav class="navegacion-principal clearfix">
-          <a href="#">INICIO</a>
+          <a href="">INICIO</a>
           <a href="#">PELICULAS</a>
           <a href="#">INICIAR SESIÓN</a>
           <a href="registro.html">REGISTRARSE</a>
@@ -84,7 +86,7 @@
       </p>
     </section>
     <!--.Sección -->
-    <section class="spec-moviereviewer">
+    <section class="spec-moviereviewer contenido">
       <div class="contenedor-video clearfix">
         <video autoplay loop poster="posterimage.jpg">
           <source src="video/La sala de cine.mp4" type="video/mp4">
@@ -235,9 +237,6 @@
     </script>
     <script src="https://www.google-analytics.com/analytics.js" async defer></script>
 
-    <script type="text/javascript" src="libs/jquery.js"></script>
-    <script src="arriba.js"></script>
-    <!-- SCRIPT DE JS PARA HACER FUNCIONAR EL BOTON ir-arriba (INCLUIR EN EL FOOTER)-->
   </section>
 </body>
 
