cambios en index, registro.html y peliculas.html (boton ir-arriba con JS)

--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
           <span></span>
         </div>
         <nav class="navegacion-principal clearfix">
-          <a href="">INICIO</a>
-          <a href="#">PELICULAS</a>
+          <a href="index.html">INICIO</a>
+          <a href="peliculas.html">PELICULAS</a>
           <a href="#">INICIAR SESIÓN</a>
           <a href="registro.html">REGISTRARSE</a>
         </nav> <!-- Navegador Principal-->
@@ -174,6 +174,7 @@
         </li>
       </ul>
     </section>
+
     <footer class="contenido-footer">
       <div class="contenedor clearfix">
         <div class="footer-informacion">
