--- a/registro.html
+++ b/registro.html
@@ -1,10 +1,9 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="es">
 
 <head>
   <meta charset="utf-8">
-  <title></title>
-  <meta name="description" content="">
+  <title>MovieReviewer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <link rel="manifest" href="site.webmanifest">
@@ -28,12 +27,17 @@
   <!-- SCRIPT Y ENLACES DE JS PARA HACER FUNCIONAR EL BOTON ir-arriba
      (INCLUIR EN EL FOOTER DESPUES)-->
 
+  <link rel="stylesheet" href="kimera.min.css">
+  <!--Buscador de peliculas en JS -->
+
   <meta name="theme-color" content="#fafafa">
 </head>
 
 <body>
   <span class="ir-arriba icon-arrow-up"></span>
   <section class="contenido">
+
+    <div class="buscador is-wrapper"></div>
     <header class="site-header">
       <div class="hero">
         <div class="contenido-header">
@@ -69,10 +73,10 @@
           <span></span>
         </div>
         <nav class="navegacion-principal clearfix">
-          <a href="#">INICIO</a>
-          <a href="#">PELICULAS</a>
+          <a href="index.html">INICIO</a>
+          <a href="peliculas.html">PELICULAS</a>
           <a href="#">INICIAR SESIÓN</a>
-          <a href="#">REGISTRARSE</a>
+          <a href="registro.html">REGISTRARSE</a>
         </nav> <!-- Navegador Principal-->
       </div><!-- Contenedor -->
     </div><!-- Barra de navegación -->
@@ -118,8 +122,9 @@
               grammatica"
             </p>
             <p>Adolfo Pastelin Enciso</p>
-            <p id="comentario">"Cuando tenga mi lap haré muchas cosas en la pagina web.
-              KAPPA DE ALL MIGTH"</p>
+            <p id="comentario">"Li Europan lingues es membres del sam familie. Lor separat existentie es un myth. Por
+              scientie, musica, sport etc, litot Europa usa li sam vocabular. Li lingues differe solmen in li
+              grammatica x2"</p>
           </div>
           <div class="ultimos-postFacebook">
             <h3>Ultimos post en <span>Facebook</span></h3>
@@ -159,10 +164,6 @@
         <p class="copyright">Todos los derechos Reservados MOVIEREVIEWER<i class="far fa-copyright"></i> 2019</p>
       </footer>
     </section>
-
-
-
-
 </body>
 
 </html>
