href a os formularios.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <span></span>
           </div>
           <nav class="navegacion-principal clearfix">
-            <a href="#">INICIO</a>
+            <a href="index.html">INICIO</a>
             <a href="#">PELICULAS</a>
             <a href="#">INICIAR SESIÓN</a>
             <a href="registro.html">REGISTRARSE</a>
