--- a/registro.html
+++ b/registro.html
@@ -58,10 +58,10 @@
             <span></span>
           </div>
           <nav class="navegacion-principal clearfix">
-            <a href="#">INICIO</a>
+            <a href="index.html">INICIO</a>
             <a href="#">PELICULAS</a>
             <a href="#">INICIAR SESIÓN</a>
-            <a href="#">REGISTRARSE</a>
+            <a href="registro.html">REGISTRARSE</a>
           </nav> <!-- Navegador Principal-->
         </div><!-- Contenedor -->
       </div><!-- Barra de navegación -->
