--- a/registro.html
+++ b/registro.html
@@ -72,24 +72,27 @@
             <div id="datos_usuario" class="registro caja clearfix">
                 <h3>Datos personales</h3>
                 <div class="campo">
-                <label for="nickname">Nickname: </label>
+                <label for="nickname">Nickname: </label><br>
                 <input type="text" id="nickname" name="nickname" placeholder="Tú nickname">
               </div>
               <div class="campo">
-                <label for="contraseña">Contraseña: </label>
+                <label for="contraseña">Contraseña: </label><br>
                 <input type="text" id="contraseña" name="contraseña" placeholder="Tú contraseña">
               </div>
               <div class="campo">
-                <label for="nombre">Nombre: </label>
+                <label for="nombre">Nombre: </label><br>
                 <input type="text" id="nombre" name="nombre" placeholder="Tú nombre">
               </div>
               <div class="campo">
-                <label for="apellido">Apellido: </label>
+                <label for="apellido">Apellido: </label><br>
                 <input type="text" id="apellido" name="apellido" placeholder="Tú apellido">
               </div>
               <div class="campo">
-                <label for="email">Email: </label>
+                <label for="email">Email: </label><br>
                 <input type="text" id="email" name="email" placeholder="Tú email">
+              </div>
+              <div class="campo">
+                <input type="button" id="btnRegistra" value="Registrase">
               </div>
               <div id="error"></div> 
             </div>  <!--.Datos Usuarios --> 
