--- a/registro.html
+++ b/registro.html
@@ -92,7 +92,7 @@
                 <input type="text" id="email" name="email" placeholder="Tú email">
               </div>
               <div class="campo">
-                <input type="button" id="btnRegistra" value="Registrase">
+                <input type="button" id="btnRegistra" valueq3="Registrase">
               </div>
               <div id="error"></div> 
             </div>  <!--.Datos Usuarios --> 
